<resources>
    <string name="app_name">Soothing Noise Player</string>
    <string name="persist_key">PersistKey</string>

    <string name="pause_button_label">Stop All</string>
    <string name="resume_button_label">Resume</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="stop">Stop</string>
    <string name="save_default">Save Default Profile</string>
    <string name="load_default">Load Default Profile</string>
    <string name="save_custom">Save Custom Profile</string>
    <string name="load_custom">Load Custom Profile</string>
    <string name="no_profiles_saved">No profiles available to load</string>
    <string name="bad_profile_name_warning">Profile name must not be blank</string>
    <string name="load_profile_problem">Problem loading profile</string>
    <string name="save_profile_problem">Problem saving profile</string>
    <string name="sleep_timer">Set Sleep Timer</string>
    <string name="settings_label">Settings</string>
    <string name="credits_label">Credits</string>


    <string name="header_antisound">Anti Sound</string>
    <string name="header_nature">Nature</string>
    <string name="header_travel">Travel</string>
    <string name="header_interiors">Interiors</string>

    <string name="birds">Birds</string>
    <string name="brown_noise">Brown Noise</string>
    <string name="boat">Boat</string>
    <string name="city">City</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="fireplace">Fireplace</string>
    <string name="pink_noise">Pink Noise</string>
    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="stream">Stream</string>
    <string name="summer_night">Summer Night</string>
    <string name="train">Train</string>
    <string name="waves">Waves</string>
    <string name="white_noise">White Noise</string>
    <string name="wind">Wind</string>


    <string name="credits_error">Error loading credits…</string>
    <string name="big_file_warning">Warning: sound effects should be a megabyte or less</string>
    <string name="control_notification_channel_name">Control Notification</string>
    <string name="control_notification_label">Soothing Noise Player is Running</string>
    <string name="credits_header">"%s: "</string>
    <string name="developers">Developers</string>
    <string name="translators">Translators</string>
    <string name="enable_control_notification">Enable control notification</string>
    <string name="other_contributors">Other Contributors great and small</string>
    <string name="upstream_application">Upstream application</string>
    <string name="sounds">Sounds</string>
    <string name="author">Author</string>
    <string name="icon">Icon</string>
    <string name="editor">Editor</string>
    <string name="license">License</string>


    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="export_button">Export</string>
    <string name="autoload_default_profile">Load default profile on launch?</string>
    <string name="disable_problem_sounds">Disable sounds with known issues?</string>
    <string name="sleep_timer_fade_duration">Fade duration for sleep timer</string>
    <string name="edit_profiles">Custom Profiles</string>
    <string name="confirm_delete_profile">Confirm deletion of profile "%s"?</string>
    <string name="confirm_delete_custom_sound">Confirm deletion of sound "%s"?</string>
    <string name="custom_sounds">Custom Sounds</string>
    <string name="add_sound_problem">Problem adding sound</string>
    <string name="recovery">Recovery</string>
    <string name="recoverpre1dot3profiles">Recover pre 1.3.1 profiles</string>
    <string name="recoverpre1dot3sounds">Recover pre 1.3.1 sounds</string>
    <string name="recovery_success">Recovery Success</string>
    <string name="recovery_failure">Nothing Recovered</string>

    <string name="hours_hint">HH</string>
    <string name="minutes_hint">MM</string>
    <string name="seconds_hint">SS</string>
    <string name="time_separator">:</string>
</resources>