<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/play_pause_button"
        android:onClick="playPause"
        android:title="@string/pause_button_label"
        android:icon="@drawable/pause"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="promptSleepTimer"
        android:title="@string/sleep_timer"
        android:icon="@drawable/timer"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/load_button"
        android:onClick="promptLoadCustomProfile"
        android:title="@string/load_custom"
        android:icon="@drawable/cd_load"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="promptSaveCustomProfile"
        android:title="@string/save_custom"
        android:icon="@drawable/save"
        app:showAsAction="ifRoom"/>

    <item
        android:onClick="applyDefaultProfile"
        android:title="@string/load_default" />

    <item
        android:onClick="saveDefaults"
        android:title="@string/save_default" />

    <item
        android:onClick="displaySettings"
        android:title="@string/settings_label" />

    <item
        android:onClick="displayCredits"
        android:title="@string/credits_label" />
</menu>