<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toggle_autostart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autoload_default_profile"
                style="@style/largeText"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toggle_problem_sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/largeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disable_problem_sounds" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fadeout_duration_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_timer_fade_duration"
                style="@style/largeText"/>

            <include
                layout="@layout/timespan_input"
                android:id="@+id/sleep_timer_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/largeText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/profiles_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/edit_profiles"
            style="@style/largeText" />

        <LinearLayout
            android:id="@+id/profiles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/custom_sounds_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/custom_sounds"
            style="@style/largeText" />

        <LinearLayout
            android:id="@+id/custom_sounds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="54sp"
            android:clickable="true"
            android:onClick="promptAddCustomSound"
            app:srcCompat="@drawable/plus_sign" />

    </LinearLayout>
</android.widget.ScrollView>
